--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link " href="#">Time Table <span class="sr-only">(current)</span></a>
+                    <a class="nav-link " href="#tt">Time Table <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link " href="#">Syllabus Generator<span class="sr-only">(current)</span></a>
+                    <a class="nav-link " href="#syll">Syllabus Generator<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link " href="#">Books Download<span class="sr-only">(current)</span></a>
+                    <a class="nav-link " href="#books">Books Download<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link " href="#">About us<span class="sr-only">(current)</span></a>
+                    <a class="nav-link " href="#about">Credit<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
 
         </div>
     </nav>
     <!-- Time table image -->
-    <div class="time_table">
+    <div class="time_table" id="tt">
         <img src="assets/images/tt2.jpeg" alt="">
     </div>
     <!-- buttons and images -->
@@ -66,7 +66,7 @@
             <button class="button link" onclick="display(8)">CG Lab</button>
 
         </div>
-        <div class="img-container">
+        <div class="img-container" id="syll">
             <img class="img" src="assets/images/gen.jpeg" alt="" class="img" id="img-1">
             <img class="img" src="" style="display: none;" alt="" id="img-2">
             <img class="img" src="" alt="" id="img-3" style="display: none;">
@@ -74,16 +74,67 @@
         </div>
     </div>
     <!-- books links -->
-    <div class="downloads">
+    <!-- <div class="downloads">
         <h2>Some Useful links</h2>
         <a class="button link">
             this is the sample button
         </a>
+    </div> -->
+    <h3 id="books">Books Download</h3>
+    <div class="container">
+
+        <div class="dropdown" id="books">
+            <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Select Books
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a target="_blank" class="dropdown-item"
+                    href="assets/books/Artificial Intelligence A Modern Approach by Stuart Russell, Peter Norvig, 3rd.pdf">Artificial
+                    Intelligence </a>
+                <a target="_blank" class="dropdown-item" href="assets/books/Computer Networks 5th Edition.pdf">Computer
+                    Networks</a>
+
+                <a target="_blank" class="dropdown-item"
+                    href="assets/books/Computer Graphics with OpenGL (4th ed.) [Hearn, Baker & Carithers 2013].pdf">Computer
+                    graphics</a>
+                <a target="_blank" class="dropdown-item" href="assets/books/Database_Systems.pdf">DBMS</a>
+                <a target="_blank" class="dropdown-item" href="assets/books/3.20.pdf">Operations
+                    Research</a>
+                <a target="_blank" class="dropdown-item"
+                    href="assets/books/Introduction_to_Computing_Using_Python_A.pdf">Python
+                    Programming</a>
+
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="dropdown" id="books">
+            <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Additional Resources
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a target="_blank" class="dropdown-item" href="assets/books/271_AI Lect Notes.pdf">Artificial
+                    Intelligence - 1 </a>
+                <a target="_blank" class="dropdown-item"
+                    href="assets/books/Artificial Intelligence by Kevin Knight, Elaine Rich, B. Nair (z-lib.org).pdf">Artificial
+                    Intelligence - 2 </a>
+                <a target="_blank" class="dropdown-item" href="assets/books/OR NOTES.pdf">Operations Research</a>
+
+                <a target="_blank" class="dropdown-item"
+                    href="assets/books/PROBABILITY THEORY AND STOCHASTIC PROCESSES.pdf">Probability</a>
+                <a target="_blank" class="dropdown-item" href="assets/books/database_management_systems.pdf">DBMS</a>
+                <a target="_blank" class="dropdown-item" href="assets/books/Computer Networks.pdf">Computer Networks</a>
+                <a target="_blank" class="dropdown-item" href="assets/books/Docs_CSECGLNotes2013.pdf">Computer
+                    Graphics</a>
+            </div>
+        </div>
     </div>
     <!-- footer -->
-    <div class="footer">
+    <div class="footer" id="about">
 
-        <a href="https://github.com/rayansailani" target="_blank">
+        <a href="https://github.com/stali1234" target="_blank">
             <i class="fab fa-github"></i>
         </a>
     </div>
@@ -101,6 +152,7 @@
 
         switch (num) {
             case 1:
+                console.log("selected");
                 pic1 = "assets/images/cn1.jpeg";
                 pic2 = "assets/images/cn2.jpeg";
                 pic3 = "";
@@ -151,6 +203,7 @@
         }
         p1.src = pic1;
         if (pic2 !== "") {
+            p2.style.display = "block";
             p2.src = pic2;
         }
         else {
