--- a/index.html
+++ b/index.html
@@ -51,7 +51,15 @@
     </nav>
     <!-- Time table image -->
     <div class="time_table" id="tt">
-        <img src="assets/images/tt2.jpeg" alt="">
+        <div class="button-group">
+            <button class="button" onclick="time(1)">
+                CSE
+            </button>
+            <button class="button" onclick="time(2)">
+                ISE
+            </button>
+        </div>
+        <img src="assets/images/tt2.jpeg" alt="" id="time">
     </div>
     <!-- buttons and images -->
     <div class="syllabus_generator" id="syll">
@@ -137,6 +145,20 @@
     </div>
 </body>
 <script>
+    function time(num) {
+        let pic = "";
+        let p1 = document.getElementById("time");
+        switch (num) {
+            case 1:
+                console.log("HEy");
+                pic = "assets/images/tt2.jpeg";
+                break;
+            case 2:
+                pic = "assets/images/ttise.jpeg";
+                break;
+        }
+        p1.src = pic;
+    }
     function display(num) {
         let pic1 = "";
         let pic2 = "";
