--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         </p>
 
 
-        <p> Opertiaonal Research
+        <p> Opertional Research
             <select id="select6" class="select">
                 <option value="10">s</option>
                 <option value="9">a</option>
