--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         </p>
 
 
-        <p> Operational Research
+        <p> Operations Research
             <select id="select6" class="select">
                 <option value="10">s</option>
                 <option value="9">a</option>
@@ -268,6 +268,7 @@
     </div>
 </body>
 <script>
+
     function time(num) {
         let pic = "";
         let p1 = document.getElementById("time");
