--- a/index.html
+++ b/index.html
@@ -140,6 +140,26 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="dropdown">
+            <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                QUESTION PAPERS
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a target="_blank" class="dropdown-item" href="assets/books/EJ-818.pdf"> DBMS(2013[DEC/JAN]) </a>
+                <a target="_blank" class="dropdown-item"
+                    href="assets/books/JE-825.pdf"> DBMS(2013[JUNE/JULY]) </a>
+                <a target="_blank" class="dropdown-item" href="assets/books/JU 1020.pdf"> DBMS(2014[JAN/FEB])</a>
+
+                <a target="_blank" class="dropdown-item"
+                    href="assets/books/JU 897.pdf"> DBMS(2014[JAN/FEB(Y2K6)]])</a>
+                <a target="_blank" class="dropdown-item" href="assets/books/ED 768.pdf"> DBMS(2015[DECEMBER])</a>
+                <a target="_blank" class="dropdown-item" href="assets/books/EJ - 1223.pdf"> DBMS(2015[JUNE/JULY])</a>
+                
+            </div>
+        </div>
+    </div>
     <h1 class="heading" id="gpa">SGPA Calculator</h1>
     <div class="content">
 
@@ -262,7 +282,7 @@
     <!-- footer -->
     <div class="footer" id="about">
 
-        <a href="https://github.com/stali1234" target="_blank">
+        <a href="https://github.com/stali1234/infoapp.github.io" target="_blank">
             <i class="fab fa-github"></i>
         </a>
     </div>
