changed GPA grading system.

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         output6 = selectElement6.value;
         output7 = selectElement7.value;
         output8 = selectElement8.value;
-        out = ((parseInt(output1) + parseInt(output2) + parseInt(output3) + parseInt(output4) + parseInt(output5) + parseInt(output6) + parseInt(output7) + parseInt(output8)) / 8);
+        out = ((parseInt(output1)*4 + parseInt(output2)*4 + parseInt(output3)*4 + parseInt(output4)*3 + parseInt(output5)*3 + parseInt(output6)3 + parseInt(output7)*1.5 + parseInt(output8)*1.5) / 24);
 
 
         document.querySelector('.output').textContent
